--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>칸반 보드</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div class="App"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
