feat: 칸반 보드 기본 구조

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>칸반 보드</title>
   </head>
   <body>
-    <div class="App"></div>
+    <div class="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
